develop | blserver fix

--- a/blserver/config/application.properties
+++ b/blserver/config/application.properties
@@ -1,1 +1,9 @@
-logging.file.name=log/bl.log 
+### Log Block
+logging.file.name = log/bl.log
+
+######################################################
+### Kafka External
+
+kafka-ext.bootstrap=localhost:9092
+kafka-ext.security-protocol=SSL
+kafka-ext.keystore-location=/Albuquerque/key.jks
