--- a/blserver/config/application.properties
+++ b/blserver/config/application.properties
@@ -7,3 +7,4 @@ logging.file.name = log/bl.log
 kafka-ext.bootstrap=localhost:9092
 kafka-ext.security-protocol=SSL
 kafka-ext.keystore-location=/Albuquerque/key.jks
+kafka-ext.keystore-password=JessyPinkMan
