--- a/blserver/config/application.properties
+++ b/blserver/config/application.properties
@@ -8,3 +8,5 @@ kafka-ext.bootstrap=localhost:9092
 kafka-ext.security-protocol=SSL
 kafka-ext.keystore-location=/Albuquerque/key.jks
 kafka-ext.keystore-password=JessyPinkMan
+
+db.persist=true
