develop | all cfgs

--- a/aserver/config/application.properties
+++ b/aserver/config/application.properties
@@ -1,9 +1,17 @@
-### Log Block
-logging.file.name = log/a.log
+########### log file section
+logging.file.name=log/a.log
 
-######################################################
-### Kafka External
+#timer interval for all routes in ms - for all routes except singletonerefresher
+aserver.timers.repeatInterval = 1000
+aserver.fileconsumer.repeatInterval = 1000
 
-kafka-ext.bootstrap=localhost:9092
-kafka-ext.security-protocol=SSL
-kafka-ext.keystore-location=/Albuquerque/key.jks
+apredictserver.timers.repeatInterval=1000
+
+#anomaly if mse > threshold
+apredictserver.dl.threshold=0.0050
+
+#anomaly if score < threshold	
+apredictserver.if.threshold=4.5
+
+# WAIT timeout - in secs
+aserver.pyresult.waitTimeout = 60
