--- a/restserver/config/application.properties
+++ b/restserver/config/application.properties
@@ -2,5 +2,5 @@ logging.file.name=log/rs.log
 
 app.restserver.page-size=500
 
-app.restserver.cors.host1=http://host1.com
-app.restserver.cors.host2=https://host2.com
+app.restserver.cors.host1=http://host1-rest.com
+app.restserver.cors.host2=https://host2-rest.com
